--- a/mr-homework2/pom.xml
+++ b/mr-homework2/pom.xml
@@ -4,19 +4,19 @@
 
   <groupId>edu.northeastern.ccs.cs6240</groupId>
   <artifactId>mr-homework2</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>jar</packaging>
 
-  <name>mr-homework2</name>
+  <name>hadoop-homework2</name>
   <url>http://maven.apache.org</url>
 
- <properties>
+  <properties>
     <encoding>UTF-8</encoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <hadoop.version>2.9.1</hadoop.version>
   </properties>
-  
+
   <build>
     <sourceDirectory>src/main/java</sourceDirectory>
     <plugins>
@@ -78,4 +78,4 @@
     </dependency>
   </dependencies>
 </project>
- 
+  
