--- a/TwitterFollowerJoins/pom.xml
+++ b/TwitterFollowerJoins/pom.xml
@@ -33,6 +33,25 @@
       <version>${spark.version}</version>
 	  <scope>provided</scope>
 	</dependency>
+	<dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-library</artifactId>
+      <version>${scala.version}</version>
+          <scope>provided</scope>
+    </dependency>
+        <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-core_2.11</artifactId>
+      <version>${spark.version}</version>
+          <scope>provided</scope>
+        </dependency>
+        <dependency>
+    <groupId>org.apache.spark</groupId>
+    <artifactId>spark-sql_2.11</artifactId>
+    <version>${spark.version}</version>
+    <scope>provided</scope>
+</dependency>
+        
 
     <!-- Test -->
     <dependency>
