--- a/TwitterFollowerJoins/Makefile
+++ b/TwitterFollowerJoins/Makefile
@@ -7,7 +7,7 @@ hadoop.root=/scratch/hadoop-2.9.1/
 app.name=Follower
 jar.name=TwitterFollowerJoins.jar
 maven.jar.name=TwitterFollowerJoins-1.0.jar
-job.name=edu.northeastern.ccs.cs6240.TwitterFollowerJoins.RSJoinRDD
+job.name=edu.northeastern.ccs.cs6240.TwitterFollowerJoins.RepJoinRDD
 local.master=local[4]
 local.input=input
 local.output=output
