--- a/spark-twitter-follower/pom.xml
+++ b/spark-twitter-follower/pom.xml
@@ -28,10 +28,11 @@
       <version>${scala.version}</version>
     </dependency>
     <dependency>
-        <groupId>org.apache.spark</groupId>
-        <artifactId>spark-sql_2.10</artifactId>
-        <version>1.6.2</version>
-    </dependency>
+    <groupId>org.apache.spark</groupId>
+    <artifactId>spark-sql_2.11</artifactId>
+    <version>${spark.version}</version>
+    <scope>provided</scope>
+</dependency>
 
     <!-- Test -->
     <dependency>
