Have been working on data set and it's killing

--- a/hw3/Makefile
+++ b/hw3/Makefile
@@ -7,7 +7,7 @@ hadoop.root=/scratch/hadoop-2.9.1/
 app.name=Page Rank
 jar.name=hw3.jar
 maven.jar.name=hw3-1.0.jar
-job.name=ccs.neu.edu.hw3.App
+job.name=ccs.neu.edu.hw3.PageRankDset
 local.master=local[4]
 local.input=input
 local.output=output
