--- a/hw3/Makefile
+++ b/hw3/Makefile
@@ -7,7 +7,7 @@ hadoop.root=/scratch/hadoop-2.9.1/
 app.name=Page Rank
 jar.name=hw3.jar
 maven.jar.name=hw3-1.0.jar
-job.name=ccs.neu.edu.hw3.PageRankDset
+job.name=ccs.neu.edu.hw3.ShortestPath
 local.master=local[4]
 local.input=input
 local.output=output
@@ -17,7 +17,7 @@ hdfs.input=input
 hdfs.output=output
 # AWS EMR Execution
 aws.emr.release=emr-5.17.0
-aws.bucket.name=mr-spark
+aws.bucket.name=spark-pagerank
 aws.input=input
 aws.output=output
 aws.log.dir=log
@@ -36,8 +36,8 @@ clean-local-output:
 
 # Runs standalone
 local: jar clean-local-output
-	spark-submit --class ${job.name} --master ${local.master} --name "${app.name}" ${jar.name} 3
-
+	# spark-submit --driver-memory 12g --class ${job.name} --master ${local.master} --name "${app.name}" ${jar.name} 100
+	spark-submit --class ${job.name} --master ${local.master} --name "${app.name}" ${jar.name} ${local.input} ${local.output}
 # Start HDFS
 start-hdfs:
 	${hadoop.root}/sbin/start-dfs.sh
@@ -110,7 +110,7 @@ upload-app-aws:
 # Main EMR launch.
 aws: jar upload-app-aws delete-output-aws
 	aws emr create-cluster \
-		--name "WordCount Spark Cluster" \
+		--name "pageRank Spark Cluster" \
 		--release-label ${aws.emr.release} \
 		--instance-groups '[{"InstanceCount":${aws.num.nodes},"InstanceGroupType":"CORE","InstanceType":"${aws.instance.type}"},{"InstanceCount":1,"InstanceGroupType":"MASTER","InstanceType":"${aws.instance.type}"}]' \
 	    --applications Name=Hadoop Name=Spark \
